--- a/Projects/templates.yml
+++ b/Projects/templates.yml
@@ -1,3 +1,7 @@
+settings:
+  base:
+    SWIFT_VERSION: 5.3
+
 targetTemplates:
   StaticFramework:
     type: framework.static
@@ -10,9 +14,17 @@ targetTemplates:
       PRODUCT_NAME: ${target_name}
       PRODUCT_BUNDLE_IDENTIFIER: $(PRODUCT_NAME)
       INFOPLIST_FILE: ../Info.plist
-      DYLIB_INSTALL_NAME_BASE: "@rpath"
-      SKIP_INSTALL: YES
-      LD_RUNPATH_SEARCH_PATHS: $(inherited) @executable_path/Frameworks @loader_path/../Frameworks
+      FRAMEWORK_SEARCH_PATHS:
+        - $(inherited)
+        - '"."'
+      LD_RUNPATH_SEARCH_PATHS:
+        - $(inherited)
+        - "@executable_path/Frameworks"
+        - "@loader_path/Frameworks"
+      OTHER_LDFLAGS:
+        - "-Objc"
+        - "-all_load"
+        - $(inherited)
 
   Framework:
     type: framework
@@ -25,9 +37,17 @@ targetTemplates:
       PRODUCT_NAME: ${target_name}
       PRODUCT_BUNDLE_IDENTIFIER: $(PRODUCT_NAME)
       INFOPLIST_FILE: ../Info.plist
-      DYLIB_INSTALL_NAME_BASE: "@rpath"
-      SKIP_INSTALL: YES
-      LD_RUNPATH_SEARCH_PATHS: $(inherited) @executable_path/Frameworks @loader_path/../Frameworks
+      FRAMEWORK_SEARCH_PATHS:
+        - $(inherited)
+        - '"."'
+      LD_RUNPATH_SEARCH_PATHS:
+        - $(inherited)
+        - "@executable_path/Frameworks"
+        - "@loader_path/Frameworks"
+      OTHER_LDFLAGS:
+        - "-Objc"
+        - "-all_load"
+        - $(inherited)
 
   FrameworkUnitTest:
     type: bundle.unit-test
@@ -44,3 +64,26 @@ targetTemplates:
       LD_RUNPATH_SEARCH_PATHS: $(inherited) @executable_path/Frameworks @loader_path/Frameworks
     profile:
       config: Debug
+
+  AppEnvironmentTests:
+    type: application
+    platform: iOS
+    sources:
+      - path: ${testTarget}/AppEnvironmentTests
+    dependencies:
+      - target: ${testTarget}
+    settings:
+      PRODUCT_NAME: ${target_name}
+      PRODUCT_BUNDLE_IDENTIFIER: $(PRODUCT_NAME)
+      INFOPLIST_FILE: $(SRCROOT)/AppEnvironmentTests/Supporting Files/Info.plist
+      FRAMEWORK_SEARCH_PATHS:
+        - $(inherited)
+        - '"."'
+      LD_RUNPATH_SEARCH_PATHS:
+        - $(inherited)
+        - "@executable_path/Frameworks"
+        - "@loader_path/Frameworks"
+      OTHER_LDFLAGS:
+        - "-Objc"
+        - "-all_load"
+        - $(inherited)
